[gd_scene load_steps=3 format=3 uid="uid://8k6ldupam638"]

[ext_resource type="Script" path="res://scripts/upgrades/neuro/dual_strike_scene.gd" id="1_2wljc"]
[ext_resource type="Script" path="res://scripts/shared/ai_cooldown_timer.gd" id="2_35bdc"]

[node name="DualStrikeScene" type="Node2D"]
y_sort_enabled = true
position = Vector2(0, -13)
script = ExtResource("1_2wljc")

[node name="Strikes" type="Marker2D" parent="."]
metadata/_edit_lock_ = true

[node name="Strike1" type="Marker2D" parent="Strikes"]
unique_name_in_owner = true
position = Vector2(30, -21)
rotation = -0.872665

[node name="Strike2" type="Marker2D" parent="Strikes"]
unique_name_in_owner = true
position = Vector2(30, 20)
rotation = 0.872665

[node name="FireTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("2_35bdc")

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
